--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="extras/dynamicCode/rta/" kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="src/lib/abbot.jar"/>
 	<classpathentry kind="lib" path="src/lib/commons-logging-1.1.jar"/>
@@ -20,5 +21,7 @@
 	<classpathentry kind="lib" path="src/lib/poi-scratchpad-3.7-20101029.jar"/>
 	<classpathentry kind="lib" path="src/lib/powerswing-0.3.jar"/>
 	<classpathentry kind="lib" path="src/lib/tools.jar"/>
+	<classpathentry kind="lib" path="src/lib/xmlunit-1.4.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="Pipe"/>
 </classpath>
