--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,19 @@
 
     <dependencies>
         <dependency>
+            <groupId>maven</groupId>
+            <artifactId>maven-abbot-plugin</artifactId>
+            <version>1.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>uk.ac.imperial</groupId>
             <artifactId>tools</artifactId>
             <version>1.0</version>
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
+            <groupId>xmlunit</groupId>
             <artifactId>xmlunit</artifactId>
             <version>1.4</version>
         </dependency>
@@ -28,19 +34,37 @@
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
+            <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
-            <version>1.1</version>
+            <version>1.1.3</version>
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>3.7</version>
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml-schemas</artifactId>
+            <version>3.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-scratchpad</artifactId>
+            <version>3.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
             <artifactId>poi-examples</artifactId>
             <version>3.7</version>
         </dependency>
@@ -52,45 +76,28 @@
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
+            <groupId>jfree</groupId>
             <artifactId>jfreechart</artifactId>
-            <version>1.0.6</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
-            <artifactId>poi-ooxml-schemas</artifactId>
-            <version>3.7</version>
-        </dependency>
-
-        <dependency>
-            <groupId>uk.ac.imperial</groupId>
+            <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.13</version>
+            <version>1.2.17</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jcommon</artifactId>
+            <version>1.0.16</version>
         </dependency>
 
         <dependency>
             <groupId>uk.ac.imperial</groupId>
             <artifactId>jama</artifactId>
             <version>1.0.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>uk.ac.imperial</groupId>
-            <artifactId>poi-scratchpad</artifactId>
-            <version>3.7</version>
-        </dependency>
-
-        <dependency>
-            <groupId>uk.ac.imperial</groupId>
-            <artifactId>abbot</artifactId>
-            <version>1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>uk.ac.imperial</groupId>
-            <artifactId>poi</artifactId>
-            <version>3.7</version>
         </dependency>
 
         <dependency>
@@ -112,15 +119,9 @@
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
+            <groupId>edu.ucar</groupId>
             <artifactId>netcdf</artifactId>
             <version>4.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>uk.ac.imperial</groupId>
-            <artifactId>jcommon</artifactId>
-            <version>1.0.10</version>
         </dependency>
 
         <dependency>
@@ -129,61 +130,6 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>maven</groupId>-->
-            <!--<artifactId>maven-abbot-plugin</artifactId>-->
-            <!--<version>1.1</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>commons-logging</groupId>-->
-            <!--<artifactId>commons-logging</artifactId>-->
-            <!--<version>1.1.3</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>gov.nist.math.jama</groupId>-->
-            <!--<artifactId>gov.nist.math.jama</artifactId>-->
-            <!--<version>1.1.1</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>jfree</groupId>-->
-            <!--<artifactId>jcommon</artifactId>-->
-            <!--<version>1.0.16</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>jfree</groupId>-->
-            <!--<artifactId>jfreechart</artifactId>-->
-            <!--<version>1.0.13</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>log4j</groupId>-->
-            <!--<artifactId>log4j</artifactId>-->
-            <!--<version>1.2.17</version>-->
-        <!--</dependency>-->
-
-
-        <!--&lt;!&ndash;  JPowerGraph library  &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>powerswing</groupId>-->
-            <!--<artifactId>powerswing</artifactId>-->
-            <!--<version>0.3</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>jpowergraph</groupId>-->
-            <!--<artifactId>jpowergraph-common</artifactId>-->
-            <!--<version>0.2</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>jpowergraph</groupId>-->
-            <!--<artifactId>jpowergraph-swing</artifactId>-->
-            <!--<version>0.2</version>-->
-        <!--</dependency>-->
-
     </dependencies>
 
     
