Make phase to execute main of Pipe.java
* Add exec plugin to pom.xml
  Run with mvn exec:java

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,19 @@
     <artifactId>PIPE</artifactId>
     <version>4.3.0</version>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <configuration>
+                    <mainClass>Pipe</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>maven</groupId>
