Change build to be platform independent
* Apply fix from
* http://stackoverflow.com/questions/10335815/how-to-make-maven-build-platform-independent

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>PIPE</artifactId>
     <version>4.3.0</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
