--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,16 @@
         </plugins>
     </build>
 
+
+
+    <repositories>
+        <repository>
+            <id>LocalLibs</id>
+            <name>Imperial</name>
+            <url>file://${project.basedir}/src/local-libs</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>maven</groupId>
@@ -33,9 +43,9 @@
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.0</version>
+            <groupId>internal</groupId>
+            <artifactId>ic-tools</artifactId>
+            <version>0.0.1</version>
         </dependency>
 
         <dependency>
@@ -45,8 +55,8 @@
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
-            <artifactId>hadoop-dev-core</artifactId>
+            <groupId>internal</groupId>
+            <artifactId>hadoop</artifactId>
             <version>0.13.1</version>
         </dependency>
 
@@ -87,9 +97,9 @@
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
+            <groupId>internal</groupId>
             <artifactId>drmaa</artifactId>
-            <version>1.0</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
@@ -112,25 +122,25 @@
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
+            <groupId>internal</groupId>
             <artifactId>jama</artifactId>
             <version>1.0.2</version>
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
+            <groupId>internal</groupId>
             <artifactId>powerswing</artifactId>
             <version>0.3</version>
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
+            <groupId>internal</groupId>
             <artifactId>jpowergraph-swing</artifactId>
             <version>0.2</version>
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.imperial</groupId>
+            <groupId>internal</groupId>
             <artifactId>jpowergraph-common</artifactId>
             <version>0.2</version>
         </dependency>
