Add basic functionality for writing out petrinets
* Can write out Place, Transition, Arc, Token
* Uses reflection and pnml annotations
* Added tests

--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,18 @@
         </dependency>
 
         <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.8.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>15.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
