--- a/pipe-gui/pom.xml
+++ b/pipe-gui/pom.xml
@@ -179,6 +179,13 @@
             <artifactId>hadoop</artifactId>
             <version>0.13.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <scope>test</scope>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 
     
