--- a/pipe-core/pom.xml
+++ b/pipe-core/pom.xml
@@ -51,6 +51,12 @@
             <version>1.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <scope>test</scope>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 
 
