Change visitor pattern to acyclic visitor
* This leads to nicer design when visitors dont need to visit
  every single petri net component
* It will also help reduce cyclic dependencies if packaging is changed

--- a/pipe-gui/pom.xml
+++ b/pipe-gui/pom.xml
@@ -42,6 +42,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>uk.ac.imperial</groupId>
+            <artifactId>pipe-core</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>maven</groupId>
             <artifactId>maven-abbot-plugin</artifactId>
             <version>1.1</version>
