--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     </properties>
 
     <build>
+        <finalName>pipe</finalName>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
