Fix maven exec:exec issues in pom for RTA

--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,20 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <mainClass>Pipe</mainClass>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>-cp</argument>
+                        <classpath/>
+                        <argument>Pipe</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
