--- a/pipe-core/pom.xml
+++ b/pipe-core/pom.xml
@@ -57,12 +57,32 @@
             <scope>test</scope>
             <version>1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>1.5.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.assertj</groupId>
+                    <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
+                    <version>1.2.0</version>
+                    <configuration>
+                        <packages>
+                            <param>pipe</param>
+                        </packages>
+                    </configuration>
+                </plugin>
+
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
