--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,7 @@ language: java
 branches:
   only:
     - develop
+
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
