--- a/pipe-core/pom.xml
+++ b/pipe-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>PIPE</artifactId>
         <groupId>uk.ac.imperial</groupId>
-        <version>1.0</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
