--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,17 @@
     <artifactId>PIPE</artifactId>
 
     <packaging>pom</packaging>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
     <name>PIPE Parent Project</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+
+    <scm>
+        <developerConnection>scm:git:git@github.com:sarahtattersall/PIPE.git</developerConnection>
+    </scm>
 
     <modules>
         <module>pipe-gui</module>
@@ -31,6 +36,12 @@
                         <source>1.7</source>
                         <target>1.7</target>
                     </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.4.2</version>
                 </plugin>
             </plugins>
         </pluginManagement>
