--- a/pipe-gui/pom.xml
+++ b/pipe-gui/pom.xml
@@ -6,11 +6,10 @@
     <parent>
         <groupId>uk.ac.imperial</groupId>
         <artifactId>PIPE</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>5.0.0-beta-1</version>
     </parent>
 
     <artifactId>PIPE-gui</artifactId>
-    <version>4.3.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -72,7 +71,7 @@
         <dependency>
             <groupId>uk.ac.imperial</groupId>
             <artifactId>pipe-core</artifactId>
-            <version>1.0</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
