--- a/pipe-core/pom.xml
+++ b/pipe-core/pom.xml
@@ -2,14 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>PIPE</artifactId>
         <groupId>uk.ac.imperial</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>5.0.0-beta-1</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pipe-core</artifactId>
+
+
     <dependencies>
         <dependency>
             <groupId>commons-logging</groupId>
