--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 name: PIPE 5
 markdown: redcarpet
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 pygments: true
