Change PetriNet to map Id -> PetriNetComponents #46
* This makes life a lot easier when trying to get components by id
* Annotations are the exception that don't seem to have ids
* Had to write AdaptedPetriNet so that the maps can be marshalled into
  the correct pnml format

--- a/pipe-core/pom.xml
+++ b/pipe-core/pom.xml
@@ -86,6 +86,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.moxy</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
+
     </dependencies>
 
 
