First stab at reacahability
* Create pipe-module module in Maven
* Implement Reachability class that writes the states to a Writer
* Not completely sure probability/rates functions are right
* Need to ask Will about how to create tests

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <modules>
         <module>pipe-gui</module>
         <module>pipe-core</module>
+        <module>pipe-module</module>
     </modules>
 
     <build>
