* Flag states if they are tangible/vanishing * Add two new gspn examples in pipe-module * GUI can choose whether to use existing Petri net (currently null) or   load a Petri net   It uses IntelliJ form editor * Had to download and install jgraphx 2.5.1.0 keep an eye   out for Maven release #51

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>pipe-gui</module>
         <module>pipe-core</module>
         <module>pipe-module</module>
+        <module>pipe-module-gui</module>
     </modules>
 
     <build>
