--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>pipe-gui</module>
         <module>pipe-core</module>
         <module>pipe-module</module>
+        <module>pipe-module-gui</module>
     </modules>
 
     <build>
