--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>uk.ac.imperial</groupId>
     <artifactId>PIPE</artifactId>
     <packaging>pom</packaging>
-    <version>5.0.0-beta-2</version>
+    <version>5.0.0-beta-2-SNAPSHOT</version>
     <name>PIPE Parent Project</name>
 
     <properties>
