--- a/pipe-gui/pom.xml
+++ b/pipe-gui/pom.xml
@@ -120,7 +120,7 @@
         <dependency>
             <groupId>uk.ac.imperial</groupId>
             <artifactId>pipe-core</artifactId>
-            <version>5.0.0-beta-2</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
