--- a/pipe-gui/pom.xml
+++ b/pipe-gui/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>uk.ac.imperial</groupId>
         <artifactId>PIPE</artifactId>
-        <version>5.0.0-beta-3</version>
+        <version>5.0.0-beta-4-SNAPSHOT</version>
     </parent>
 
     <artifactId>PIPE-gui</artifactId>
@@ -148,7 +148,7 @@
         <dependency>
             <groupId>uk.ac.imperial</groupId>
             <artifactId>pipe-core</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
