Add Markov chain remote repo to pom

--- a/pipe-gui/pom.xml
+++ b/pipe-gui/pom.xml
@@ -25,7 +25,7 @@
         </repository>
 
         <repository>
-            <id>PIPECore-mvn-repo</id>
+            <id>PIPEMarkovCh-mvn-repo</id>
             <url>https://raw.github.com/sarahtattersall/PIPEMarkovChain/mvn-repo/</url>
             <snapshots>
                 <enabled>true</enabled>
