--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,15 @@
                     <mainClass>Pipe</mainClass>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <argLine>-Xmx1024m</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
