--- a/pipe-module-gui/pom.xml
+++ b/pipe-module-gui/pom.xml
@@ -40,15 +40,28 @@
                 <updatePolicy>always</updatePolicy>
             </snapshots>
         </repository>
+
+        <repository>
+            <id>rendersnake-repo</id>
+            <name>Repository for rendersnake</name>
+            <url>http://rendersnake.googlecode.com/svn/repo</url>
+        </repository>
     </repositories>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.rendersnake</groupId>
+            <artifactId>rendersnake</artifactId>
+            <version>1.7.3</version>
+        </dependency>
 
         <dependency>
             <groupId>uk.ac.imperial</groupId>
             <artifactId>pipe-core</artifactId>
             <version>1.0.1-SNAPSHOT</version>
         </dependency>
+
 
         <dependency>
             <groupId>uk.ac.imperial</groupId>
