--- a/pipe-module-gui/pom.xml
+++ b/pipe-module-gui/pom.xml
@@ -10,10 +10,24 @@
     <artifactId>pipe-module-gui</artifactId>
 
     <repositories>
+        <!--<repository>-->
+            <!--<id>LocalLibs</id>-->
+            <!--<name>Imperial</name>-->
+            <!--<url>file://${project.basedir}/src/local-libs</url>-->
+        <!--</repository>-->
+        <!--<repository>-->
+            <!--<id>repo</id>-->
+            <!--<url>file://${project.basedir}/src/local-libs</url>-->
+        <!--</repository>-->
         <repository>
-            <id>repo</id>
-            <url>file://${project.basedir}/src/local-libs</url>
+            <id>JPowergraph</id>
+            <url>https://raw.github.com/sarahtattersall/JPowerGraph/master/releases/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
         </repository>
+
         <repository>
             <id>PIPEMarkovChain-mvn-repo</id>
             <url>https://raw.github.com/sarahtattersall/PIPEMarkovChain/mvn-repo/</url>
@@ -22,6 +36,7 @@
                 <updatePolicy>always</updatePolicy>
             </snapshots>
         </repository>
+
 
         <repository>
             <id>PIPECore-mvn-repo</id>
@@ -97,12 +112,12 @@
         </dependency>
 
         <dependency>
-            <groupId>internal</groupId>
+            <groupId>net.sourceforge.jpowergraph</groupId>
             <artifactId>jpowergraph-common</artifactId>
             <version>0.2</version>
         </dependency>
         <dependency>
-            <groupId>internal</groupId>
+            <groupId>net.sourceforge.jpowergraph</groupId>
             <artifactId>jpowergraph-swing</artifactId>
             <version>0.2</version>
         </dependency>
