--- a/pipe-gui/pom.xml
+++ b/pipe-gui/pom.xml
@@ -169,6 +169,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.graphstream</groupId>
+            <artifactId>gs-core</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>maven</groupId>
             <artifactId>maven-abbot-plugin</artifactId>
             <version>1.1</version>
