--- a/pipe-module-gui/pom.xml
+++ b/pipe-module-gui/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>uk.ac.imperial</groupId>
             <artifactId>pipe-core</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>1.0.2</version>
         </dependency>
 
 
