--- a/pipe-gui/pom.xml
+++ b/pipe-gui/pom.xml
@@ -7,6 +7,7 @@
         <version>5.1.0-SNAPSHOT</version>
     </parent>
 
+
     <artifactId>PIPE-gui</artifactId>
     <packaging>jar</packaging>
 
@@ -165,7 +166,7 @@
         <dependency>
             <groupId>uk.ac.imperial</groupId>
             <artifactId>pipe-markov-chain</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
 
         <dependency>
