--- a/pipe-gui/pom.xml
+++ b/pipe-gui/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>uk.ac.imperial</groupId>
         <artifactId>PIPE</artifactId>
-        <version>5.0.1-SNAPSHOT</version>
+        <version>5.0.1</version>
     </parent>
 
     <artifactId>PIPE-gui</artifactId>
@@ -152,7 +152,7 @@
         <dependency>
             <groupId>uk.ac.imperial</groupId>
             <artifactId>pipe-module-gui</artifactId>
-            <version>5.0.1-SNAPSHOT</version>
+            <version>5.0.1</version>
         </dependency>
 
         <dependency>
@@ -165,7 +165,7 @@
         <dependency>
             <groupId>uk.ac.imperial</groupId>
             <artifactId>pipe-markov-chain</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
 
         <dependency>
