--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>uk.ac.imperial</groupId>
     <artifactId>PIPE</artifactId>
     <packaging>pom</packaging>
-    <version>5.0.1-SNAPSHOT</version>
+    <version>5.0.1</version>
     <name>PIPE Parent Project</name>
 
     <properties>
